# TempWebRAG

./: .gitignore  README.md  THE_IDEA.md  pyproject.toml  requirements.txt
code/: phase2_5_real_world_test.py  phase2_rigorous.py  phase2_trimodal_embedding.py  phase3_tree_traversal.py  phase4_temporal_diffing.py  phase5_rag_pipeline.py  phase6_cross_site.py
data/: ground_truth.py
data/test_pages/: webscraper_phones.html  webscraper_product1.html  webscraper_product2.html  webscraper_product3.html  webscraper_product4.html  webscraper_product5.html
docs/literature/: findings.md  related_work.md
eval/: comprehensive_eval.py  cross_site_eval.py  design.md  results.md  review.md  review_v2.md  temporal_eval.py  temporal_eval_v2.py  test_reproducibility.py
experiments/: critical_review.md  results_log.md
paper/: main.tex
src/webtkgrag/: __init__.py  dom_parser.py  embedding.py  pipeline.py  retrieval.py  temporal.py
