[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tempwebrag"
version = "0.1.0"
description = "Temporal Fact Extraction from Web Page DOM Evolution for Time-Aware RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.2.0",
    "scipy>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
